project finished (last version)

--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,7 +1,7 @@
 body {
 
     background-color: #99CCCC;
-    background-image: url("/static/log.jpg");
+    background-image: url("/static/images/anon.jpg");
     background-repeat:no-repeat;
     background-size: cover;
     -moz-background-size: cover;
