--- a/src/main/resources/templates/homePage.html
+++ b/src/main/resources/templates/homePage.html
@@ -28,10 +28,10 @@
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
             <a th:href="@{/movies/}"><img width="300px" height="300px" class="img-circle img-fluid d-block mx-auto" src="https://media.giphy.com/media/l0HlHp2aBxnKirj3O/giphy.gif" alt=""/></a>
-            <a th:href="@{/movies/}"><h2 style="color: #13324E; font-weight: bold">Oceniać filmy</h2></a>
+            <a th:href="@{/movies/}"><h2 style="color: whitesmoke; font-weight: bold">Oceniać filmy</h2></a>
         </div>
         <div class="col-lg-4 col-sm-6 text-center mb-4">
-            <a th:href="@{/movies/}"><img width="300px" height="300px" class="img-circle img-fluid d-block mx-auto" src="https://media.tenor.com/images/e05b70207372da61eccdde4a210514bc/tenor.gif" alt=""/></a>
+            <a th:href="@{/movies/}"><img width="300px" height="300px" class="img-circle img-fluid d-block mx-auto" src="https://media.giphy.com/media/RsJGTjWNv9DMY/giphy.gif" alt=""/></a>
             <a th:href="@{/movies/}"><h2 style="color: white; font-weight: bold">Komentować filmy</h2></a>
         </div>
     </div>
