--- a/src/main/resources/templates/editMovie.html
+++ b/src/main/resources/templates/editMovie.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header::head"></head>
-<body style="background: radial-gradient(circle, #585858, #383838)">
+<body style="background-image:url('http://www.allwhitebackground.com/images/2/2271.jpg');
+    background-repeat:no-repeat;
+    background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    display:block;
+    width:100%;
+    height:100%;
+    position:absolute;
+    overflow:auto;">
 <div th:replace="header :: header"></div>
 <div class="container-fluid" style="margin-left: 25%; margin-right: 25%; margin-top: 70px">
     <div class="row">
         <div class="col-md-6">
-            <img class="img-responsive img-rounded img-fluid roounded mb-3 mb-md-0" th:src="'/images/' + ${movie.getPhoto()}" style="width: 500px; height: auto"/>
+            <img class="img-responsive img-rounded img-fluid rounded mb-3 mb-md-0" th:src="'/images/' + ${movie.getPhoto()}" style="width: 500px; height: auto"/>
         </div>
         <div class="col-md-6">
-            <p style="font-size: 50px; font-family: 'Droid Serif'; color: #990000">Edycja okładki: </p>
-            <h3 style="font-size: 30px; font-family: 'Droid Serif'; color: #990000">Wczytaj okładkę: </h3>
+            <p style="font-size: 50px; font-family: 'Droid Serif'; color: black">Edycja okładki: </p>
+            <h3 style="font-size: 30px; font-family: 'Droid Serif'; color: black">Wczytaj okładkę: </h3>
             <form th:action="@{/movies/{id}/cover(id = ${movie.getId()})}" th:method="post" enctype="multipart/form-data">
                 <div class="form-group">
-                    <h4 th:if="${error}" th:text="${error}" class="alert alert-danger" style="font-size: 20px; width: 75%; font-family: 'Droid Serif'; color: #990000"></h4>
+                    <h4 th:if="${error}" th:text="${error}" class="alert alert-danger" style="font-size: 20px; width: 75%; font-family: 'Droid Serif'; color: black"></h4>
                     <input type="file" id="file" name="file"/>
                     <button style="width: 40%; margin-bottom: 40px; margin-top: 20px" type="submit" class="btn btn-primary">Załaduj okładkę</button>
                 </div>
@@ -26,18 +35,18 @@
             <input type="hidden" th:field="*{author}" th:value="${movie.getAuthor()}"/>
             <input type="hidden" th:field="*{photo}" th:value="${movie.getPhoto()}"/>
             <div class="form-group">
-                <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: #990000">Tytuł filmu: </h3>
+                <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: black">Tytuł filmu: </h3>
                 <input style="width: 100%" type="text" class="form-control" placeholder="Podaj tytuł filmu" th:field="*{title}" required="required"/>
             </div>
             <div class="form-group">
-                <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: #990000">Opis filmu: </h3>
+                <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: black">Opis filmu: </h3>
                 <textarea style="width: 100%" rows="10" class="form-control" placeholder="Podaj opis filmu" th:field="*{description}" required="required"/>
             </div>
             <div class="form-group">
-                <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: #990000">Tytuł filmu: </h3>
+                <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: black">Rok: </h3>
                 <input style="width: 100%" type="number" class="form-control" placeholder="Podaj rok wydania filmu" th:field="*{year}" required="required"/>
             </div>
-            <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: #990000">Wybierz kategorię: </h3>
+            <h3 class="my-4" style="font-size: 30px; font-weight: normal; font-family: 'Droid Serif'; color: black">Wybierz kategorię: </h3>
             <div style="margin-bottom: 30px">
                 <select style="width: 25%" required="required" th:field="*{category}">
                     <option th:each="category: ${allCategories}" th:value="${category.id}" th:text="${category.name}"></option>
