--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -23,7 +23,7 @@
 
 <div th:fragment="header">
     <div>
-        <img height="auto" width="100%" src="/images/banner.png"  class="img-responsive"/>
+        <!--<img height="auto" width="100%" src="/images/banner.png"  class="img-responsive"/>-->
     </div>
     <nav class="navbar navbar-inverse" data-spy="affix" data-offset-top="197">
         <div class="container-fluid">
@@ -38,10 +38,10 @@
                     <span class="glyphicon glyphicon-search"></span>
                 </button>
             </form>
-
+            <!--sec:authorize="hasAuthority('ROLE_ADMIN')"-->
             <!--DLA ZOLOGOWANYCH-->
             <ul class="nav navbar-nav">
-                <li><a th:if="${#authorization.expression('isAuthenticated()')}" th:href="@{/movies/addMovie}" th:text="'Dodaj film'"></a></li>
+                <li><a th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" th:href="@{/movies/addMovie}" th:text="'Dodaj film'"></a></li>
                 <li><a th:href="@{/movies}" th:method="get" th:text="'Lista filmów'"></a></li>
             </ul>
             <form th:if="${#authorization.expression('isAuthenticated()')}" class="navbar-form navbar-right" th:action="@{/logout}" th:method="post">
