--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="header::head"></head>
-<body>
+<body style="background-image:url('http://www.allwhitebackground.com/images/2/2271.jpg');
+    background-repeat:no-repeat;
+    background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    display:block;
+    width:100%;
+    height:100%;
+    position:absolute;
+    overflow:auto;">
 <h1 th:text="${title}">Błąd</h1>
 <p th:text="${message}">Coś poszło nie tak!</p>
 <a th:href="${link}">Powrót</a>
